--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,5 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_style = tab
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
