--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,9 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
 indent_style = tab
 insert_final_newline = true
+trim_trailing_whitespace = True
+
+end_of_line = lf
 max_line_length = 120
